docs/api/qiskit/0.19/qiskit.pulse.ControlChannel.mdx
---
title: ControlChannel (v0.19)
description: API reference for qiskit.pulse.ControlChannel in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.ControlChannel
---

# ControlChannel

<Class id="qiskit.pulse.ControlChannel" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/channels.py" signature="ControlChannel(index)" modifiers="class">
  Control channels provide supplementary control over the qubit to the drive channel. These are often associated with multi-qubit gate operations. They may not map trivially to a particular qubit index.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  **Raises**

  [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If `index` is not a nonnegative integer.

  ## Attributes

  <span id="controlchannel-index" />

  ### index

  <Attribute id="qiskit.pulse.ControlChannel.index" attributeTypeHint="int">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `int`
  </Attribute>

  <span id="controlchannel-name" />

  ### name

  <Attribute id="qiskit.pulse.ControlChannel.name" attributeTypeHint="str">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Attribute>

  <span id="controlchannel-prefix" />

  ### prefix

  <Attribute id="qiskit.pulse.ControlChannel.prefix" attributeValue="'u'">
    A shorthand string prefix for characterizing the channel type.
  </Attribute>

  ## Methods

  |   |
  | - |
</Class>

